fixes for block patterns and some alignment bugs, fixed node error for legacy ssl provider, updated versions

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -96,7 +96,7 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
         max-width: 960px;
     }
 
-    .editor-styles-wrapper .wp-block:not(.alignwide):not(.alignfull) {
+    .editor-styles-wrapper .wp-block:not(.alignwide):not(.alignfull):not(.wp-social-link) {
         max-width: 1140px;
         margin-right: auto;
         margin-left: auto;
@@ -169,6 +169,8 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
     body.post-type-post .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.container.aignwide {
         width: 1368px;
         max-width: 100vw;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.alignnarrow,
