--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -1993,12 +1993,6 @@ hr {
         margin-right: -10%;
     }
 
-    .page-template-default .entry-content .alignwide,
-    .post-template-default .entry-content .alignwide {
-        margin-left: auto;
-        margin-right: auto;
-    }
-
     .page-template-default .entry-content .alignfull,
     .wp-block[data-type="core/cover"][data-align="full"] {
         width: 100vw;
